--- a/src/est.css
+++ b/src/est.css
@@ -3,7 +3,7 @@
 }
 .padre{
     background-color: rgb(198, 13, 13);
-    height: 100vH;
+    height: 100vh;
     width: 100vw;
     position: relative;
     box-sizing: border-box;
